--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.54",
+    "ajv": "^8.12.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "eslint-config-prettier": "^9.0.0",
@@ -16,6 +17,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "express": "^4.18.2",
+    "json-schema-traverse": "^1.0.0",
     "mongoose": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -55,7 +57,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
